--- a/blossom/index.html
+++ b/blossom/index.html
@@ -20,9 +20,9 @@
 
 <p>This is a sketch to test the <a href="https://github.com/proce5in/gem">Proce5.in gem</a>.</p>
 
-<h2>Embeded sketch</h2>
+<h2>Embedded sketch</h2>
 
-<p>Using Proce5.in, you can embed sketches in the Markdown syntax. For exemple:</p>
+<p>Using Proce5.in, you can embed sketches in the Markdown syntax. For example:</p>
             <div class="canvas-container">
               <canvas id="embeded-sketch-0"></canvas>
             </div>
